<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/waypoint_bottom_disalog_sheet"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_SetWayPointTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/set_a_waypoint"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/tv_waypoint_Desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/wayPointDesctTitle"
        android:textAllCaps="true"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_inputDecriptionFeild"
        android:layout_width="match_parent"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="160"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_brief_description"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_inputWapoiintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_addImgWayPointBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_image"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"/>

    <ImageView
        android:id="@+id/ib_breadCrumbImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/waypointimage"
        android:cropToPadding="true"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/defaultpointimg" />

    <Button
        android:id="@+id/btn_waypointBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"

        android:text="@string/submit_waypoint_btn" />

</androidx.appcompat.widget.LinearLayoutCompat>