<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_RouteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_RouteDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:breakStrategy="high_quality"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_RouteName" />

            <TextView
                android:id="@+id/tv_RouteStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_RouteDesc" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:paddingBottom="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_timeLabelID"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/timer"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timevalueID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/timevalue"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_waypointInfoBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_timeLabelID" />

            <TextView
                android:id="@+id/tv_distanceLabelID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/distance"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_altLabelID"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toEndOf="@+id/tv_timeLabelID"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_disatanceValueID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/distanxcelabel"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_waypointInfoBtn"
                app:layout_constraintEnd_toStartOf="@+id/tv_AltValueID"
                app:layout_constraintHorizontal_bias="0.403"
                app:layout_constraintStart_toEndOf="@+id/timevalueID"
                app:layout_constraintTop_toBottomOf="@+id/tv_timeLabelID"
                app:layout_constraintVertical_bias="0.45" />

            <TextView
                android:id="@+id/tv_altLabelID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="48dp"
                android:gravity="center"
                android:text="@string/altitude"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_AltValueID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/altvalue"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_waypointInfoBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_timeLabelID" />


            <ImageView
                android:id="@+id/iv_wapointBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/routebackwards"
                app:layout_constraintBottom_toTopOf="@+id/btn_startRoute"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/points_back_arrow" />

            <ImageView
                android:id="@+id/iv_waypointFrowardBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/routeforwards"
                android:src="@drawable/points_arrow_forward_24"
                app:layout_constraintBottom_toTopOf="@+id/btn_finishRouteBtn"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_startRoute"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/start_route"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_finishRouteBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#F44336"

                android:text="@string/finish_route"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_waypointInfoBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/waypoint_info"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/btn_finishRouteBtn"
                app:layout_constraintEnd_toStartOf="@+id/iv_waypointFrowardBtn"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toEndOf="@+id/iv_wapointBackBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
